# template.python-project

./: .copier-answers.yml  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .prettierrc.json5  Brewfile  CLAUDE.copier.md  CLAUDE.local-devenv.md  CLAUDE.local.md  CLAUDE.md  README.md  README.template.md  copier.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: setup.yml  test-acceptance.yml  test-template.yml
config.d/pre-commit/: javascript.yaml  terraform.yaml
copier-template/: .envrc  .gitignore  .pre-commit-config.yaml.jinja  .prettierignore  CLAUDE.md.jinja  README.md.jinja  main.py  package.json.jinja  pyproject.toml.jinja
copier-template/config.d/prettier/: bq.sql.json5
copier-template/typesafety/: pyrightconfig.json
lib/: README.md
lib/ci/: acceptance-test  copier
lib/local-devenv/: README.md
